[project]
name = "quiver-pdb"
version = "0.4.0"
description = "Quiver files are simply one large file with the contents of many smaller files inside of them."
readme = "README.md"
authors = [
    { name = "rabbitQ", email = "deepthough@postech.ac.kr" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
qvfrompdbs = "quiver.qvfrompdbs:qvfrompdbs"
qvls = "quiver.qvls:list_tags"
qvextract = "quiver.qvextract:extract_pdbs"
#qvextractspecific = "quiver.qvextractspecific:extract_selected_pdbs"
qvscorefile = "quiver.qvscorefile:extract_scorefile"
qvrename = "quiver.qvrename:rename_tags"
qvsplit = "quiver.qvsplit:qvsplit"
qvslice = "quiver.qvslice:qvslice"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.8.3",
]
